# HermesHTTP

./: .clang-format  .gitignore  CMakeLists.txt
hermes/: CMakeLists.txt
hermes/http/: HMS_Http.cpp  HMS_Http.h
hermes/mt/: HMS_Multithread.cpp  HMS_Multithread.h
hermes/server/: HMS_Server.cpp  HMS_Server.h
hermes/socket/: HMS_Socket.cpp
hermes/utility/: HMS_pch.h
lib/hermes/: CMakeLists.txt  Hermes.h
lib/hermes/http/: HMS_Http.cpp  HMS_Http.h
lib/hermes/mt/: HMS_Multithread.cpp
lib/hermes/server/: HMS_Server.cpp  HMS_Server.h
lib/hermes/socket/: HMS_Socket.cpp  HMS_Socket.h  HMS_TCPSocket.cpp  HMS_TCPSocket.h
lib/hermes/utility/: HMS_pch.h
scripts/: Test10k.bash  Test1k.bash  Test5k.bash
scripts/TestX_Py/: main.py  pyproject.toml
src/: CMakeLists.txt  HermesHTTP.cpp  HermesHTTP.h  main.cpp
